# magmek_site

deployment/nginx/: base_nginx.conf  default  old.conf
deployment/nginx/custom/: a_magmek-backend.nginx.conf  magmek-backend.nginx.conf  supervisord.nginx.conf
deployment/nginx/redirects/: a_aetherglow.redir.conf
magmek-backend/deployment/: magmek.nginx.conf  magmek.supervisord.conf
magmek-backend/magmek/server/: app.py  webserver.py
magmek_backend/: pyproject.toml
magmek_backend/deployment/: magmek.nginx.conf  magmek.supervisord.conf
magmek_backend/magmek/: consts.py
magmek_backend/magmek/server/: webserver.py
